Added Active Menu item styling. Going to need to re-code the Walker for #24. Testimonials now show in the header using the new Slider, currently hard-coded for the most recent 5. Closes #25, Closes #28

--- a/assets/sass/static/_header.scss
+++ b/assets/sass/static/_header.scss
@@ -81,6 +81,11 @@ The static site header.
               }
             }
 
+            &.current-menu-item {
+                background: darken($primary-color, 5%);
+                color: $light-color;
+            }
+
             &:first-of-type {
 
               @media #{$small-only} {
@@ -126,6 +131,7 @@ The static site header.
                 border-bottom: none;
               }
             }
+
           }
 
           a {
