--- a/assets/sass/templates/_realbig-slider.scss
+++ b/assets/sass/templates/_realbig-slider.scss
@@ -65,6 +65,21 @@ header .realbig-slider-container {
 
         }
 
+        .add-testimonial {
+
+            position: absolute;
+            bottom: 1%;
+            right: 1%;
+            z-index: 5;
+            color: #fff;
+            text-decoration: underline;
+
+            &:hover {
+                text-decoration: none;
+            }
+
+        }
+
     }
 
 }
