CTA shaping up. Made Services use featured images, have featured images on Sub Pages. Closes #26. Referencing #27

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -45,6 +45,7 @@ Version: 0.1.0
 @import "templates/page";
 @import "templates/home";
 @import "templates/realbig-slider";
+@import "templates/sub-page";
 
 // Shortcodes
 
