--- a/assets/sass/templates/_common.scss
+++ b/assets/sass/templates/_common.scss
@@ -27,9 +27,18 @@ Styles shared among all templates.
       display: block;
     }
 
-    h3, .fa, .wi {
-      text-align: center;
-      color: #000;
+    h3 {
+
+        text-align: center;
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        background-color: rgba(0,0,0,.6);
+        margin-bottom: 0;
+        height: 1.5em;
+        color: $light-color;
+
     }
 
     .row {
@@ -41,18 +50,36 @@ Styles shared among all templates.
       border-top: none;
       border-bottom: none;
       width: 100%;
-    }
+      background-size: cover;
+      min-height: 250px;
 
-    .button:hover, .button:hover * {
-        color: $light-color;
+        .overlay {
+
+            content: '';
+            position: absolute;
+            top: 0;
+            bottom: 0;
+            right: 0;
+            left: 0;
+            opacity: 0.6;
+
+        }
+
     }
 
     .columns:nth-child(odd) .button:hover {
-        background-color: $logo-red;
+
+        .overlay {
+            background-color: $logo-red;
+        }
     }
 
     .columns:nth-child(even) .button:hover {
-        background-color: $logo-blue;
+
+        .overlay {
+            background-color: $logo-blue;
+        }
+
     }
 
     .vertical-center {
