CTA re-arranged. No longer full-width as it made working with the background images impossible. May be able to revisit that with another strategy later. Closes #27

--- a/assets/sass/_base.scss
+++ b/assets/sass/_base.scss
@@ -73,6 +73,16 @@ button, .button {
       border-color: $secondary-button-border-hover;
       color: $secondary-button-border-hover;
     }
+
+      &.fill {
+          background-color: $secondary-color;
+          color: $light-color;
+
+          &:hover {
+              background-color: $primary-color;
+          }
+      }
+
   }
 
   &.warning {
