Removed CTA and Services sections. Rearranged Homepage to have a sidebar for Angie's List and MailChimp. Closes #36

--- a/assets/sass/static/_header.scss
+++ b/assets/sass/static/_header.scss
@@ -120,7 +120,7 @@ The static site header.
           margin: 0;
           //box-shadow: 0 0 30px rgba(#000, 0.3);
           display: none;
-          width: 100%;
+          width: auto;
           padding-right: 3px;
           z-index: 50;
 
