--- a/style.css
+++ b/style.css
@@ -4193,7 +4193,7 @@ throughout this theme's SASS files.
       list-style: none;
       margin: 0;
       display: none;
-      width: 100%;
+      width: auto;
       padding-right: 3px;
       z-index: 50; }
       #site-header .top-nav .sub-menu .menu-item:last-of-type a {
@@ -4311,7 +4311,7 @@ throughout this theme's SASS files.
       list-style: none;
       margin: 0;
       display: none;
-      width: 100%;
+      width: auto;
       padding-right: 3px;
       z-index: 50; }
       #site-footer .primary-nav .sub-menu .menu-item:last-of-type a {
@@ -4404,47 +4404,6 @@ throughout this theme's SASS files.
 .no-height {
   height: 0; }
 
-#services {
-  position: relative; }
-  #services .fa, #services .wi {
-    text-align: center;
-    font-size: 4em;
-    display: block; }
-  #services h3 {
-    text-align: center;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    background-color: rgba(0, 0, 0, 0.6);
-    margin-bottom: 0;
-    height: 1.5em;
-    color: #fff; }
-  #services .row {
-    padding: 0.9375rem 0 0.9375rem 0; }
-  #services .button {
-    margin: 0;
-    border-top: none;
-    border-bottom: none;
-    width: 100%;
-    background-size: cover;
-    min-height: 250px; }
-    #services .button .overlay {
-      content: '';
-      position: absolute;
-      top: 0;
-      bottom: 0;
-      right: 0;
-      left: 0;
-      opacity: 0.6; }
-  #services .columns:nth-child(odd) .button:hover .overlay {
-    background-color: #C31A2F; }
-  #services .columns:nth-child(even) .button:hover .overlay {
-    background-color: #094C8B; }
-  @media only screen and (max-width: 40em) {
-    #services .vertical-center {
-      margin-top: 0 !important; } }
-
 body {
   background-color: #D6E0EB; }
 
@@ -4513,53 +4472,6 @@ body.home .page-content {
   @media only screen and (min-width: 40.063em) {
     body.home .page-content {
       margin: 30px 0; } }
-
-body.home #home-cta {
-  padding: 1em;
-  background-repeat: no-repeat;
-  position: relative;
-  background-position: -150px -150px;
-  margin-top: 30px; }
-  body.home #home-cta .cta-text {
-    background-color: rgba(0, 0, 0, 0.55);
-    padding: 1em; }
-    body.home #home-cta .cta-text p {
-      font-weight: 700;
-      color: #fff; }
-  body.home #home-cta h2 {
-    color: #000; }
-  body.home #home-cta .tabs-content > .content.active {
-    float: left; }
-  body.home #home-cta .tabs li {
-    text-align: center; }
-    body.home #home-cta .tabs li a {
-      background: transparent; }
-      body.home #home-cta .tabs li a.primary.button {
-        background-color: #C73144;
-        color: #fff;
-        border-color: #fff; }
-        body.home #home-cta .tabs li a.primary.button:hover {
-          background-color: #0C4E8B; }
-      body.home #home-cta .tabs li a.secondary.button {
-        background-color: #0C4E8B;
-        color: #fff;
-        border-color: #fff; }
-        body.home #home-cta .tabs li a.secondary.button:hover {
-          background-color: #C73144; }
-    body.home #home-cta .tabs li.active a.primary.button {
-      background-color: #0a4174; }
-      body.home #home-cta .tabs li.active a.primary.button:hover {
-        background-color: #b32c3d; }
-    body.home #home-cta .tabs li.active a.secondary.button {
-      background-color: #b32c3d; }
-      body.home #home-cta .tabs li.active a.secondary.button:hover {
-        background-color: #0a4174; }
-  body.home #home-cta .button {
-    text-transform: uppercase;
-    font-weight: bold;
-    margin: 0; }
-  body.home #home-cta .tabs dd > a, body.home #home-cta .tabs .tab-title > a {
-    font-family: 'Lora'; }
 
 body.home #newsletter .widget {
   background-color: #ebebeb;
