--- a/style.css
+++ b/style.css
@@ -4188,11 +4188,10 @@ throughout this theme's SASS files.
               border: none !important; } }
     #site-header .top-nav .sub-menu {
       position: absolute;
-      white-space: nowrap;
       list-style: none;
       margin: 0;
       display: none;
-      width: auto;
+      width: 100%;
       padding-right: 3px;
       z-index: 50; }
       #site-header .top-nav .sub-menu .menu-item:last-of-type a {
@@ -4301,11 +4300,10 @@ throughout this theme's SASS files.
     #site-footer .primary-nav .sub-menu {
       position: absolute;
       bottom: 100%;
-      white-space: nowrap;
       list-style: none;
       margin: 0;
       display: none;
-      width: auto;
+      width: 100%;
       padding-right: 3px;
       z-index: 50; }
       #site-footer .primary-nav .sub-menu .menu-item:last-of-type a {
